para_se_basear/Trab_Anna/SyntaticAnalyzer/Tests/Error/05.AMZ
void _wrong_id() {
    int 0abz = 2;
    Az = 3;
}
